# crate-digger-web

./: .gitignore  README.md  guide.md
.tmp/demucs-adapter-smoke/: tone.m4a
.tmp/ffmpeg-clean-smoke/: vault.db-shm  vault.db-wal
.tmp/upgrade-smoke/: vault.db-shm  vault.db-wal
backend/: pyproject.toml  requirements-engine.txt  requirements.txt  sidecar_entry.py
backend/core/: ai_metadata.py  analyzer.py  artwork.py  chopper.py  database.py  discovery.py  downloader.py  exporter.py  metadata.py  mpc_export.py  mpc_export_manager.py  pipeline.py  preview.py  preview_prefetch.py  queue_manager.py  sampling_taxonomy.py  stems.py
backend/cratedigger_api/: __init__.py  app.py  cli.py  events.py  models.py  openapi.py  runtime.py
backend/tests/: conftest.py  test_api.py  test_core_regression.py  test_crates.py  test_demucs_audio.py  test_ffmpeg_setup.py  test_media_formats.py  test_queue_upgrade.py
backend/utils/: config.py  demucs_audio.py  ffmpeg_setup.py  paths.py
frontend/: index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx  main.tsx  styles.css  test-setup.ts  vite-env.d.ts
frontend/src/components/: Brand.tsx  CrateAssignmentDialog.test.tsx  CrateAssignmentDialog.tsx  PlayerBar.tsx  QueuePanel.test.tsx  QueuePanel.tsx  Sidebar.test.tsx  Sidebar.tsx  (+3 more)
scripts/: build-sidecar.ps1  desktop.ps1  dev.ps1  setup.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+20 files in other folders)
