[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "crate-digger-api"
version = "0.1.1"
description = "Local FastAPI adapter for the Crate Digger media engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "pydantic>=2.10,<3.0",
  "keyring>=25.0",
  "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
test = ["pytest>=8.3,<9.0", "httpx>=0.28,<1.0"]

[project.scripts]
crate-digger-api = "cratedigger_api.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["cratedigger_api*", "core*", "utils*"]
