[package]
name = "crate-digger"
version = "0.2.1"
description = "Crate Digger desktop shell"
authors = ["Crate Digger"]
edition = "2021"

[lib]
name = "crate_digger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
uuid = { version = "1", features = ["v4"] }
